:fire: Implement a more developer friendly api + save and load translation